V0.4.5
---------
 * Added some text-editor shortcuts of FeatherPad.
 * Auto-bracketing support.
 * Better text tabulation.
 * Translation support.
 * Added SVG symbolic icons (that change color to have high contrast with their backgrounds) and removed system icon support because some important icons may not be found in system themes.
 * Support node icons.

V0.4.4
---------
 * Transformed signal-slot connections into the new syntax.
 * Removed saving of window states because although it works with well-behaved window managers like kwin and openbox, some WM's don't respect window states completely.
 * Added a preliminary help doc.
 * Don't respond to the tray icon when there's a dialog!
 * Put the real image scale in the scale dialog!
 * Implemented auto-scrolling to selected file in file dialogs.
 * Added the ability to save selected images.
 * Added support for text zooming with Ctrl+wheel.
 * An option to set a fixed start size (700x500 by default).
 * Set minimum widths of some message boxes.
 * Changed node moving shortcuts from Ctrl+ to Alt+ for all of them to work when the text edit has focus.
 * Don't let a selected node be deselected by Ctrl + left click!
 * Fixed text direction (for RTL).
 * A workaround for Qt's backward search bug.
 * Removed the translucency workaround.
 * A method for bypassing focus stealing prevention.
 * Options for hiding toolbar or menubar.
 * An option to choose between own and system icons.
 * An option for a transparent tree view.
 * Support Shift+Enter (useful e.g. to create lists).

V0.4.3
---------
 * Readded own icons because, first, not all icon themes have all the needed icons and, second, QTBUG-50829 exists.
 * Interpret relative URLs as local paths.
 * Removed the senseless stylesheet of search and replace buttons.